# morchy

./: .gitignore  .mockery.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/: copilot-instructions.md
.github/workflows/: publish.yaml
api/controlplane/: openapi.yaml
cmd/agent/: main.go
cmd/agent/app/: command.go  config.go  di.go
cmd/app/: main.go
cmd/controlplane/: main.go
cmd/controlplane/app/: command.go  config.go  di.go
cmd/edge/: main.go
cmd/edge/app/: command.go  (+2 more)
cmd/mctl/: main.go
docs/: docs.go  swagger.json  swagger.yaml
docs/usecases/: agent.md  api.md
internal/domain/: constants.go
internal/infrastructure/: background.go  pgxpool.go
internal/usecase/: handler.go  lease.go  workload.go
latex/: Makefile  ref.bib  thesis.tex
latex/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex
latex/figs/: 4-5-workload-create.md  4-6-workload-applying.md  4-7-workload-recovery.md  4-8-workload-events.md  4-9-workload-lifecycle.md
migrations/: 20251029195659_init.sql  20251206095727_add_container.sql  20251211185006_add_event.sql  20251214082334_extend_spec.sql  20260105085927_add_net_config.sql
pkg/db.utils/: db.go  tx.go
pkg/runtime/: client.go  types.go
pkg/testutil/: helpers.go
pkg/workload/: types.go
scripts/: generate-certs.sh
tests/: .gitignore  SCENARIOS.md  pyproject.toml
tests/e2e/: README.md  run_e2e.py
tests/src/: main.py  scenarios.py  settings.py  ssh_client.py
thesis/: ref.bib  thesis.tex
thesis/chapters/: abstract.tex  chapter3.tex  chapter4.tex
(+100 files in other folders)
