[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "Iskander Shamsutdinov",email = "wensietyt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "paramiko (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
